--- a/etc/supervisor.d/webserver.ini
+++ b/etc/supervisor.d/webserver.ini
@@ -1,5 +1,5 @@
 [program:webserver]
-command = /usr/bin/python /bin/webserver.py
+command = /usr/bin/python /scripts/webserver.py
 startretries = 2
 daemon = off
 priority = 2
