Change docker image base to python3.11

--- a/etc/supervisor.d/tftp.ini
+++ b/etc/supervisor.d/tftp.ini
@@ -1,6 +1,6 @@
 [program:tftp]
 directory = /netboot/
-command = /usr/bin/py3tftp --host 0.0.0.0 -p 69 
+command = /usr/local/bin/py3tftp --host 0.0.0.0 -p 69 
 daemon=off
 priority = 1
 stdout_logfile=/scripts/tftpd.log
