--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   pxe:
     build: .
-    command: /usr/bin/supervisord
+    command: /usr/local/bin/supervisord
     ports:
       - 80:80
       - 69:69/udp
